--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ pre {
 	border-radius: 5px;
 	margin: 1.333em 0 1.333em 0;
 	overflow-x: hidden;
+	font-family: Consolas, "Liberation Mono", Courier, monospace;
 } 
 .yellow {background-color: #FFFFCC;}
 .yellow::selection {background-color: #DFF3E4; color: #999;}
