--- a/footnotes.js/footnotes.css
+++ b/footnotes.js/footnotes.css
@@ -7,43 +7,36 @@ sup[class="sup"] {
 	-webkit-font-smoothing:antialiased;
 	background: url(img/ellipsis.png) no-repeat center center;
 }
-span[class="sup"]:hover {
-	background: rgb(255,255,204);
-	color: #000;
-}
-.sup-box, .sup-img {
-	line-height: 1em;
+.sup-box, .sup-img, .sur-box, .sul-box, .sub-box {
+	line-height: 1.6em;
+	font-size: 14px;
+	font-weight: normal;
 	max-width: 220px;
 	text-align: left;
 	width: auto;
 	max-height: 120px;
-	padding: 10px;
+	padding: 4px 10px;
 	border: 2px solid #000;
 	background: #fff;
 	border-radius: 6px;
-	box-shadow: 0 1px 5px rgba(0,0,0,.5),inset 0 0 5px rgba(0,0,0,.3);
+	box-shadow: 0 2px 5px rgba(0,0,0,.5),inset 0 0 5px rgba(0,0,0,.3);
 	text-shadow: 0 1px 1px rgba(0,0,0,.1);
 	position: absolute;
 	vertical-align: middle;
 	word-wrap:break-word;
 	z-index: 100;
 }
-.sup-box * {
+.sup-box *, .sub-box * {
 	max-height: 120px;
 	max-width: 100%;
 }
-.sup-box:after {
+.sup-box::after, .sur-box::after, .sul-box::after, .sub-box::after {
 	content: "";
 	width: 0px;
 	height: 0px;
 	border: 5px solid #000;
-	border-color: rgba(255,255,255,0) #000 #000 rgba(255,255,255,0);
 	z-index: 99;
 	position: absolute;
-	bottom: -7px;
-	margin-left: -5px;
-	left: 50%;
-	box-shadow: 1px 1px 2px rgba(0,0,0,.3);
 	transform-style: preserve-3d;
 	-webkit-transform-style: preserve-3d;
 	-moz-transform-style: preserve-3d;
@@ -57,8 +50,59 @@ span[class="sup"]:hover {
     -moz-transform: rotateZ(45deg);
     -o-transform: rotateZ(45deg);
 }
+.sup-box::after{
+	bottom: -7px;
+	margin-left: -5px;
+	left: 50%;
+	border-color: rgba(255,255,255,0) #000 #000 rgba(255,255,255,0);
+	box-shadow: 1px 1px 2px rgba(0,0,0,.3);
+}
+.sub-box::after{
+	top: -7px;
+	margin-left: -5px;
+	left: 50%;
+	border-color: #000 rgba(255,255,255,0) rgba(255,255,255,0) #000;
+}
 .sup-img {padding: 0;border-radius: 0;border-color: #fff;}
-.sup-img:after{border-color: rgba(255,255,255,0) #fff #fff rgba(255,255,255,0);}
+.sup-img::after{border-color: rgba(255,255,255,0) #fff #fff rgba(255,255,255,0);}
+.sur-box, .sul-box {
+	color: #fff;
+	max-width: 240px;
+	height: 26px !important;
+	line-height: 26px !important;
+	padding: 0 10px 0 4px;
+	border-width: 0;
+	border-radius: 0 6px 6px 0;
+	box-shadow: 0 1px 5px rgba(0,0,0,.3);
+	background-color: #222;
+}
+.sul-box {
+	border-radius: 6px 0 0 6px;
+	padding: 0 4px 0 10px;
+}
+.sur-box div, .sul-box div {
+	height: 26px;
+	max-width: 240px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+.sur-box::after, .sul-box::after {
+	top: 0;
+	border-width: 13px;
+    transform: rotateZ(0deg);
+    -webkit-transform: rotateZ(0deg);
+    -moz-transform: rotateZ(0deg);
+    -o-transform: rotateZ(0deg);
+}
+.sur-box::after {
+	left: -26px;
+	border-color: rgba(255,255,255,0) #222 rgba(255,255,255,0) rgba(255,255,255,0);
+}
+.sul-box::after {
+	right: -26px;
+	border-color: rgba(255,255,255,0) rgba(255,255,255,0) rgba(255,255,255,0) #222;
+}
 @media screen and (-webkit-min-device-pixel-ratio: 2) {
 	sup[class="sup"] {
 		background-image: url(img/ellipsis@2x.png);
