--- a/css/style.css
+++ b/css/style.css
@@ -1,137 +1,175 @@
 @charset "utf-8";
 ::selection {
-    background:#C0E7FC;
-    color:#fff;
+    background:#eef1f5;
+    color:#000;
 }
 ::-moz-selection {
-    background:#C0E7FC;
-    color:#fff;
+    background:#eef1f5;
+    color:#000;
 }
 ::-webkit-selection {
-    background:#C0E7FC;
-    color:#fff;
+    background:#eef1f5;
+    color:#000;
+}
+html, body {
+	margin: 0px !important;
+	padding: 0px !important;
 }
 body {
-	-webkit-text-size-adjust: none;
-	color: #000;
-	font-size: 1em;
-	font-family: "museo-slab", "museo slab", "Helvetica Neue", Ubuntu, "WenQuanYi Micro Hei", Helvetica, "ff-tisa-web-pro-1","ff-tisa-web-pro-2","Lucida Grande", "Apple LiGothic", "LiHei Pro", "Hiragino Sans GB W6", "Hiragino Sans GB", "Microsoft JhengHei", "PMingLiU", Arial, sans-serif;
+	font-family: "museo-slab", "Helvetica Neue", Ubuntu, "WenQuanYi Micro Hei", Helvetica, "Hiragino Sans GB", "Microsoft YaHei", "Wenquanyi Micro Hei", "WenQuanYi Micro Hei Mono", "WenQuanYi Zen Hei", "WenQuanYi Zen Hei", "Apple LiGothic Medium", "SimHei", "ST Heiti", "WenQuanYi Zen Hei Sharp", Arial, sans-serif;
 	-webkit-font-smoothing:antialiased;
-	text-shadow: 0 0 1px rgba(0,0,0,0.1);
-	margin: 0px;
-	line-height: 1.6em;
-	padding: 0px;
-	background-color: #fff;
-	overflow-x: hidden;
-	font-weight: 500;
+	line-height: 1.7em;
+	text-shadow: 0 0 1px rgba(255,255,255,0.1);
+	background: #fff;
 }
-input, textarea, select, button, option {
-	outline: none;
-	font-family: "museo-slab", "museo slab", "Helvetica Neue", Ubuntu, "WenQuanYi Micro Hei", Helvetica, "ff-tisa-web-pro-1","ff-tisa-web-pro-2","Lucida Grande", "Apple LiGothic", "LiHei Pro", "Hiragino Sans GB W6", "Hiragino Sans GB", "Microsoft JhengHei", "PMingLiU", Arial, sans-serif;
-}
-input{vertical-align:middle;}
-/*input[type="search"] {
-    -webkit-appearance: textfield;
-	border: 0 solid #eee;
-}*/
-h1,h2,h3,h4,h5,h6 {font-weight: 700;}
-table, td, tr, form, textarea {
-	margin: 0px;
-	padding: 0px;
-	border-width: 0px;
-}
-ol, ul, li {
-	list-style: none;
-	list-style-type: none;
-	margin: 0px;
-	padding: 0px;
-}
+/*HEADER*/
+h1,h2,h3,h4,h5,h6 {margin: 1em 0;
+font-weight: 700;}
+h1{font-size: 2em;}
+h2{font-size: 1.8em;}
+h3{font-size: 1.6em;}
+h4{font-size: 1.4em;}
+h5{font-size: 1.2em;}
+h6{font-size: 1em;}
+/*HEADER END*/
+
 hr {
 	border-width: 1px 0 0 0;
 	border-style: solid;
 	border-color: #eee;
+	height: 0 !important;
+	background: none;
 }
-body img {
-	border: 0px solid #eee;
-	max-width: 100%;
-}
+sub,sup{font-size: .5em;}
+img {border-width: 0px;}
 a{
 	color: #000;
 	text-decoration: none;
-	outline:none;/* 去掉IE虚线 */
+	outline:none;
 }
-a {color: #2C769E;}
-a:hover {color: #4396cb;}
-.centerbox a img:hover {opacity: .7;}
-p a:hover{color: #000;background: #e7efff;}
+p a, .click {color: #2C769E;}
+a:hover, .click:hover {color: #4396cb;}
+p a:hover, .click:hover {
+	color: #000;
+	background: #F0F2F3;
+	border-radius: 2px;
+	box-shadow: 0 0 0 3px rgba(231, 232, 235, .5);
+}
+p {
+	margin: 2em 0;
+}
+p * {max-width: 100%;}
+article span.sup:hover {background-color: #fbf5c6;}
+i {border-bottom: 1px dotted #ddd;}
 blockquote {
-	border-left: 3px solid #C0E7FC;
+	border-left: 3px solid #000;
+	background: #f9f9f9;
 	-webkit-margin-before: 0;
 	-webkit-margin-after: 0;
 	-webkit-margin-start: 0;
 	-webkit-margin-end: 0;
-	margin: 0.5em 60px;
-	padding: 0.1em 0 0.1em 0.5em;
+	margin: 0 0 2em 0;
+	padding: 0.1em 0.5em 0.1em 1em;
 }
+blockquote:hover{background-color: #eee;}
 blockquote p {
-	margin: 0 0 2em 0 !important;
+	margin: 1em 0 !important;
+}
+code, pre {
+	font-family: Consolas, "Liberation Mono", Courier, monospace;
 }
 code {
-	background: #dee1e5;
+	background-color: #dee1e5;
 	padding: 0 0.3em;
 	border: 1px solid #D1D7E0;
 	border-radius: 5px;
 }
 pre {
-	box-shadow: inset 0 1px 8px rgba(0,0,0,0.5);
-	text-shadow: rgba(0,0,0,0.2) 0 1px 1px;
-	background: #d6dce3;
+	box-shadow: inset 0 1px 8px rgba(0,0,0,0.05);
+	background: #f7f9fa;
+	overflow: hidden;
 	font-size: 12px;
 	line-height: 1.333em;
 	white-space: pre;
-	padding: 5px 20px 5px 20px;
-	border-radius: 5px;
+	padding: 10px 20px;
+	border-radius: 6px;
 	margin: 1.333em 0 1.333em 0;
-	overflow-x: hidden;
-	font-family: Consolas, "Liberation Mono", Courier, monospace;
 } 
-p {
-	margin: 0 0 2em 0;
+kbd {
+	border: 1px solid #e7e7e7;
+	border-radius: 4px;
+	padding: .1em .5em;
+	margin: 0 3px;
+	background: #f7f7f7;
+	box-shadow: 0 1px 0 rgba(0,0,0,.1),0 1px 4px rgba(0,0,0,.1),inset 0 1px 1px rgba(255,255,255,1);
+	text-shadow: 0 1px 1px rgba(255,255,255,1);
+	font-family: "Lucida Grande",Verdana, Arial, sans-serif;
 }
-.yellow {background-color: #FFFFCC;}
-.yellow::selection {background-color: #DFF3E4; color: #999;}
-.blue {background-color: #E1F3FC;}
-.blue::selection {background-color: #A9DFFC; color: #999;}
-.red {background-color: #FFE8FF;}
-.red::selection {background-color: #EAE2FE;color: #999;}
-.leftbox {margin:0 20px 20px 60px;}
-.rightbox {margin:0 60px 20px 20px;}
-.left, .left100, .leftbox, header, article[class="center"], footer {float: left;}
-.left100, header, article[class="center"], footer {width: 100%}
-.right, .rightbox {float: right;}
-.centerbox {float: none;margin: 0 auto; width: 960px;}
+/*pre code {background: none !important; border-width: 0;}*/
+header ul, header li,nav ol, menu ol, menu ul,menu li, #donate, #donate li, .list-no-style, .list-no-style li{
+	list-style: none;
+	list-style-type: none;
+	margin: 0px;
+	padding: 0px;
+}
+menu, nav,form {
+	padding: 0;
+	margin: 0;
+}
+body .op0 {
+	opacity: 0 !important;
+}
+body .op1 {
+	opacity: 1 !important;
+}
+.warn {
+	box-shadow: 0 0 5px rgba(255, 5, 0, .2), inset 0 0 15px rgba(255, 5, 0, .3) !important;
+	border-color: #e3afb1 !important;
+}
+.left, .left100, header, footer, article.center, #Navbar>ul>li, .more-link, .page_navi, #Sidebar>section>ol>li, #Sidebar ul>li, .posts_links li:first-child {float: left;}
+.left100, header, footer, article.center, .more-link, .page_navi, #Sidebar ul>li {width: 100%}
+.right, .posts_links li:last-child {float: right;}
+header, footer, .center, #logo, #Navbar, #Navbar>ul>li, .more-link, .page_navi {
+	text-align: center;
+}
+.centerbox{
+	clear:both;
+	display: inline-block;
+}
+.relative, select, #single-tags, .postmetadata_left{position: relative;}
+.absolute,*::after, *::before{position: absolute;}
+.fs12, footer, .more-link, #Sidebar, .posts_links li, #single-tags {font-size: 12px !important;}
+.serif {font-family: Palatino,"Hiragino Mincho ProN",serif;}
+.top0 {top: 0 !important;}
+.left0 {left: 0 !important;}
+.right0 {right: 0 !important;}
+.p20 {
+	padding: 10px 20px;
+	margin: 2em 0;
+	border-radius: 6px;
+}
+.border-d {
+	border: 1px dashed #aaa;
+}
+.border-b-d {
+	border-bottom: 1px dotted #ddd;
+}
+.border-t-d {
+	border-top: 1px dotted #ddd;
+}
+a, input, select, blockquote, .typekit-badge, #backTop, #SearchBox, .gsc-cursor-page, #list, .trs, span.sup  {
+	-webkit-transition: all .3s;
+	-moz-transition: all .3s;
+	-o-transition: all .3s;
+	transition: all .3s;
+}
+section.centerbox {float: none;margin: 0 auto; width: 960px;text-align: left;}
 nav .dropdown::after, #price::after {
 	font-family: FontAwesome;
   	font-weight: normal;
   	font-style: normal;
   	display: inline-block;
   	text-decoration: inherit;
-}
-header, article[class="center"], footer {
-	text-align: center;
-	border-bottom: 1px dotted #eee;
-}
-.centerbox {
-	display: inline-block;
-	text-align: left;
-	padding: 0 4px;
-	width: 760px;
-}
-a, a * {
-	transition: all .3s;
-	-webkit-transition: all .3s;
-	-moz-transition: all .3s;
-	-o-transition: all .3s;
 }
 header .centerbox {text-align: center;padding: 20px 0;}
 article[class="center"] {
